Fix spacing on no sites error

--- a/resources/sass/partials/_body.scss
+++ b/resources/sass/partials/_body.scss
@@ -88,3 +88,7 @@
 		}
 	}
 }
+
+.empty {
+	padding: 0 10px;
+}
